nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-gitops
  labels:
    app: nginx-gitops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-gitops
  template:
    metadata:
      labels:
        app: nginx-gitops
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
