nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gitops
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: nginx-gitops
  ports:
    - port: 80
      targetPort: 80
