nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-gitops
spec:
  ingressClassName: gce
  rules:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-gitops
            port:
              number: 80
